--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "scripts": {
+    "lint": "eslint html5-youtube.js",
     "minify": "node_modules/uglify-js/bin/uglifyjs -c -m --comments '/@license/' -- html5-youtube.js > html5-youtube.min.js; node_modules/uglify-js/bin/uglifyjs -c -m --comments '/@license/' -- html5-youtube.compat.js > html5-youtube.compat.min.js",
     "test": "node_modules/testem/testem.js --port 3000",
     "download-video": "curl -o examples/video.mp4 http://www.html5rocks.com/en/tutorials/video/basics/Chrome_ImF.mp4"
   },
   "devDependencies": {
+    "eslint": "^2.12.0",
     "testem": "^0.9.7",
     "uglify-js": "~2.4.20"
   },
